--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:wght@300;400;700&display=swap');
 
 /*////////////////////////
     Table of Contents
@@ -20,7 +20,42 @@
 
 /* ------------------------------- 1. Global Styles -------------------------------- */
 
+:root {
+    --title-text-color: #5722CD;
+    --normal-text-color: #0C0C0C;
+    --floating-text-color: #F2F0FF;
+    --service-tile-text-color: #7A7A7A;
+    --primary-bg-color: #4845E4;
+    --button-bg-color: #ED4385;
+    --projects-bg-color: #F3F6F9;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+}
+
+body {
+    font-family: Roboto, 'Arial', sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+}
+
 /* ------------------------------- 2. Typography ----------------------------------- */
+
+button, input {
+    font-family: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Merriweather, 'Times New Roman', serif;
+}
 
 /* ------------------------------- 3. Layout --------------------------------------- */
 
