--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto:wght@300;400;600;700&display=swap');
 
 /*////////////////////////
     Table of Contents
@@ -29,6 +29,7 @@
     --primary-bg-color: #4845E4;
     --button-bg-color: #ED4385;
     --projects-bg-color: #F3F6F9;
+    --footer-bg-color: #0C0C0C;
 }
 
 * {
@@ -44,7 +45,7 @@ html {
 
 body {
     font-family: Roboto, 'Arial', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 20px;
     text-align: center;
     color: var(--normal-text-color);
@@ -64,8 +65,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Merriweather, 'Times New Roman', serif;
 }
 
-h1 {
-    font-size: 42px;
+h1, h2 {
+    font-size: 44px;
     padding: 20px 0;
 }
 
@@ -85,7 +86,7 @@ h5 {
 }
 
 p {
-    margin: 8px 0;
+    margin: 12px 0;
 }
 
 
@@ -242,6 +243,7 @@ button:hover {
     justify-content: space-between;
     align-items: flex-start;
 
+    font-weight: 400;
     text-align: left;
     padding: 0 50px;
 }
@@ -288,10 +290,9 @@ button:hover {
     background-color: var(--white);
     border: 1px solid var(--title-text-color);
     border-radius: 3px;
-    box-shadow: 0 10px 15px 0px rgba(0, 0, 0, 0.1);;
+    box-shadow: 0 10px 15px 0px rgba(0, 0, 0, 0.1);
     padding: 40px;
     text-align: left;
-    font-weight: 300;
     min-height: 380px;
 
     flex-basis: 400px;
@@ -317,6 +318,55 @@ button:hover {
 
 /* --------------- 4.5 Contact ------------------------- */
 
+.contact-section {
+    background: var(--primary-bg-color);
+    background: linear-gradient(90deg, #4B49E8 0%, #4B49E8 33%, #5722CD  100%);
+    color: var(--white);
+    padding: 100px 0 40px 0;
+}
+
+.contact-content__form {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    width: 80%;
+}
+
+.contact-content__form label {
+    font-weight: 600;
+    font-size: 18px;
+    padding: 20px 0;
+}
+
+.contact-content__form input,
+.contact-content__form textarea {
+    background-color: var(--white);
+    border: 1px solid var(--service-tile-text-color);
+    border-radius: 4px;
+    font-family: Roboto, 'Arial', sans-serif;
+    font-size: 16px;
+    color: var(--service-tile-text-color);
+    padding: 20px;
+    width: 100%;
+}
+
+.contact-content__form input::placeholder,
+.contact-content__form textarea::placeholder {
+    color: var(--service-tile-text-color);
+}
+
+.contact-content__form button {
+    width: 200px;
+    align-self: center;
+}
+
 /* --------------- 4.6 Footer ------------------- */
+
+.footer-section {
+    background-color: var(--footer-bg-color);
+    color: var(--white);
+    font-size: 14px;
+    padding: 15px 0;
+}
 
 /* ------------------------------- 5. Media Queries -------------------------------- */
