--- a/styles/styles.css
+++ b/styles/styles.css
@@ -134,6 +134,7 @@ button {
     margin: 30px 0;
 }
 
+a:hover,
 button:hover {
     cursor: pointer;
 }
@@ -293,7 +294,7 @@ button:hover {
     box-shadow: 0 10px 15px 0px rgba(0, 0, 0, 0.1);
     padding: 40px;
     text-align: left;
-    min-height: 380px;
+    min-height: 400px;
 
     flex-basis: 400px;
     flex-shrink: 1;
@@ -309,7 +310,7 @@ button:hover {
 
 .service-tile p {
     color: var(--service-tile-text-color);
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .service-tile__icon {
@@ -370,3 +371,47 @@ button:hover {
 }
 
 /* ------------------------------- 5. Media Queries -------------------------------- */
+
+@media screen and (max-width: 890px) {
+
+    h4 {
+        font-size: 36px;
+    }
+
+    p {
+        font-size: 24px;
+        font-weight: 400;
+    }
+
+    .header-content__navigation {
+        justify-content: center;
+        font-weight: 600;
+    }
+
+    .header-content p {
+        font-size: 32px;
+    }
+
+    .project-article,
+    .project-article:nth-of-type(even){
+        flex-direction: column-reverse;
+    }
+
+    .project-article__container {
+        flex-basis: auto;
+        padding: 0;
+        margin-top: 30px;
+    }
+
+    .project-article__image-wrapper {
+        flex-basis: auto;
+    }
+
+    .contact-content__form {
+        width: 90%;
+    }
+
+    .footer-section p {
+        font-size: 18px;
+    }
+}
